<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.asad.tentwenty.ui.main.home.HomeFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_watch"
        android:name="com.asad.tentwenty.ui.main.watch.WatchFragment"
        android:label="@string/watch"
        tools:layout="@layout/fragment_watch" />

    <fragment
        android:id="@+id/navigation_media_library"
        android:name="com.asad.tentwenty.ui.main.medialibrary.MediaLibraryFragment"
        android:label="@string/media_library"
        tools:layout="@layout/fragment_media_library" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.asad.tentwenty.ui.main.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
</navigation>